--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "puppeteer": "^15.2.0"
   }
 }
