--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "express": "^4.18.1",
     "puppeteer": "^15.5.0",
     "puppeteer-extra": "^3.3.4",
-    "puppeteer-extra-plugin-stealth": "^2.11.1",
-    "random-useragent": "^0.5.0"
+    "puppeteer-extra-plugin-stealth": "^2.11.1"
   }
 }
