--- a/package.json
+++ b/package.json
@@ -2,20 +2,19 @@
   "name": "webcrawler",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "source": "./app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "puppeteer": "^15.5.0",
-    "puppeteer-extra": "^3.3.4",
-    "puppeteer-extra-plugin-stealth": "^2.11.1"
+    "nodemon": "^2.0.19"
   }
 }
